--- a/app/views/user_mailer/account_confirmation.html.erb
+++ b/app/views/user_mailer/account_confirmation.html.erb
@@ -1,27 +1,3 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
-  </head>
-  <body>
-    <h1>Welcome to Bubboli, <%= @user.first_name %></h1>
-    <p>
-      Thank you for signing up to Bubboli and for wanting to
-      show the kids in your life just how much you love them.
-    </p>
-    <p>
-      To activate your account, click the URL below.
-
-      <%#= confirm_url(@user.confirmation_token) %>
-    </p>
-    <p>Thanks for joining and have a great day!</p>
-  </body>
-</html>
-
-
-
-
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
     <head>
@@ -104,8 +80,8 @@
                             <div style="color: #505050; font-family: Arial; font-size: 14px; line-height: 150%; text-align: left; max-width: 160px;">
                               <table>
                                 <tr>
-                                  <td style="background-color:#6FAE4D; height: 25px; padding:6px; width:150px; text-align:center; font-family:Arial; font-size:15px;">                                      
-                                    <a href="<%#= confirm_url(@user.confirmation_token) %>" target="_blank" style="color: #FFFFFF"><span style="color: #FFFFFF;">Activate Your Account</span></a>                                      
+                                  <td style="background-color:#6FAE4D; height: 25px; padding:6px; width:250px; text-align:center; font-family:Arial; font-size:15px;">                                      
+                                    <a href="<%= confirm_url(@user.confirmation_token) %>" target="_blank" style="color: #FFFFFF"><span style="color: #FFFFFF;">Activate Your Account</span></a>                                      
                                   </td>
                                 </tr>
                               </table>
