formatting changes to acct conf email

--- a/app/views/user_mailer/account_confirmation.html.erb
+++ b/app/views/user_mailer/account_confirmation.html.erb
@@ -48,8 +48,6 @@
                           <td valign="top" style="border-collapse: collapse">
                           <div style="color:#505050; font-family: Arial; font-size: 14px; line-height: 100%; padding: 0; text-align: left;">
                             <!-- // Begin Module: Standard Welcome \\ -->
-                          	  <br><br>
-                          	  <span style="color:#707070; font-size: 16px; line-height:150%; font-weight:bold;">Hi <%= @user.first_name %>,</span> <br><br>
                           	  <br>
                           	  <tr>
                           	    <td style="color:#707070; font-size: 15px; line-height:150%;"><h1>Welcome to Bubboli!</h1></td>  
@@ -77,10 +75,10 @@
                           
                           <!-- // Begin Module: Activation Button \\ -->
                           <td>  
-                            <div style="color: #505050; font-family: Arial; font-size: 14px; line-height: 150%; text-align: left; max-width: 250px;">
+                            <div style="color: #505050; font-family: Arial; font-size: 16px; line-height: 150%; text-align: left; max-width: 200px;">
                               <table>
                                 <tr>
-                                  <td style="background-color:#6FAE4D; height: 25px; padding:6px; width:250px; text-align:center; font-family:Arial; font-size:15px;">                                      
+                                  <td style="background-color:#6FAE4D; height: 35px; padding:6px; width:200px; text-align:center; font-family:Arial; font-size:18px;">                                      
                                     <a href="<%= confirm_url(@user.confirmation_token) %>" target="_blank" style="color: #FFFFFF"><span style="color: #FFFFFF;">Activate Your Account</span></a>                                      
                                   </td>
                                 </tr>
@@ -98,11 +96,11 @@
                           
                           <!-- // Begin Module: Signature \\ -->
                           <td>  
-                            <div style="color: #505050; font-family: Arial; font-size: 14px; line-height: 150%; text-align: left; max-width: 160px;">
+                            <div style="color: #505050; font-family: Arial; font-size: 15px; line-height: 150%; text-align: left; max-width: 160px;">
                               <table>
 
                                 <tr>
-                                  <td>
+                                  <td style="color:#707070; font-size: 15px; line-height:150%;">
                                     All the best,
                                   </td>
                                 </tr>
@@ -123,54 +121,7 @@
                       </table>
                                                     
                             
-                            <!-- // Begin Module: Footer \\ -->
-                            <table border="0" cellpadding="0" cellspacing="0" width="600" style="border-top:0">
-                              <tr>
-                                <td valign="top" style="border-collapse: collapse">
-                                  <table border="0" cellpadding="10" cellspacing="0" width="100%">
-                                    <tr>
-                                      <td colspan="2" valign="middle" style="border-collapse: collapse; background-color: #FAFAFA; border: 0">
-                                        <div style="color: #707070; font-family: Arial; font-size: 12px; line-height: 125%; text-align: center">
-                                          <span valign="middle" style="color: #53868B; font-weight: normal; font-size: 15px;">LET'S BE FRIENDS</span>
-                                          &nbsp; &nbsp; &nbsp;
-                                          <a href="http://www.facebook.com/bubboli" style="color: #53868B; font-weight: normal; text-decoration: none" target="_blank"></a>
-                                            <img align="none" alt="facebook" height="28" width="28" src="http://localhost:3000/assets/facebook.jpg" style="width: 28px; min-height: 28px; border: 0; 
-                                            line-height: 100%; outline: none; text-decoration: none; display: inline">
-                                            &nbsp; &nbsp; &nbsp;
-                                          <a href="http://www.twitter.com/bubboli" style="color: #53868B; font-weight: normal; text-decoration: none" target="_blank"></a>
-                                            <img align="none" alt="twitter" height="28" width="28" src="http://localhost:3000/assets/twitter.jpg" style="width: 28px; min-height: 28px; border: 0; 
-                                            line-height: 100%; outline: none; text-decoration: none; display: inline">
-                                            &nbsp; &nbsp; &nbsp;
-                                          <a href="http://www.pinterest.com/bubboli" style="color: #53868B; font-weight: normal; text-decoration: none" target="_blank"></a>
-                                            <img align="none" alt="pinterest" height="28" width="28" src="http://localhost:3000/assets/pinterest.jpg" style="width: 28px; min-height: 28px; border: 0; 
-                                            line-height: 100%; outline: none; text-decoration: none; display: inline">
-                                            &nbsp; &nbsp; &nbsp;
-                                            <span style="color: #53868B; font-weight: normal; font-size: 15px;">STAY CONNECTED</span>
-                                        </div>  
-                                      </td>  
-                                    </tr>
-                                    
-                                    <tr>
-                                      <td valign="top" width="350" style="border-collapse: collapse">
-                                        <div style="color: #707070; font-family:Arial; font-size: 12px; line-height: 125%; text-align: left" >
-                                          <em>Copyright © 2013 Bubboli, All rights reserved.</em><br><br>
-                                          <strong>Our mailing address is:</strong><br>
-                                          <div>
-                                            <span>Bubboli</span><br>
-                                            <div>
-                                              <span>55 W 26 Street</span><br>
-                                              <span>New York, NY 10010</span><br>                                             
-                                            </div>  
-                                          </div>  
-                                        </div>
-                                      </td>
-                                    </tr>  
-                                  </table>  
-                                </td>
-                              </tr>
-                            </table>
-                            <!-- // End Module: Footer \\ -->
-                            
+                           
                           </td>
                         </tr>  
                         
