minor change in email conf link

--- a/app/views/user_mailer/account_confirmation.html.erb
+++ b/app/views/user_mailer/account_confirmation.html.erb
@@ -78,8 +78,8 @@
                             <div style="color: #505050; font-family: Arial; font-size: 16px; line-height: 150%; text-align: left; max-width: 200px;">
                               <table>
                                 <tr>
-                                  <td style="background-color:#6FAE4D; height: 35px; padding:6px; width:200px; text-align:center; font-family:Arial; font-size:18px;">                                      
-                                    <a href="<%= confirm_url(@user.confirmation_token) %>" target="_blank" style="color: #FFFFFF"><span style="color: #FFFFFF;">Activate Your Account</span></a>                                      
+                                  <td style="background-color:#6FAE4D; height: 35px; padding:6px; width:200px; text-align:center; font-family:Arial; font-size:16px;">                                      
+                                    <a href="<%= confirm_url(@user.confirmation_token) %>" target="_blank" style="color: #FFFFFF; text-decoration: none;"><span style="color: #FFFFFF;">ACTIVATE YOUR ACCOUNT</span></a>                                      
                                   </td>
                                 </tr>
                               </table>
