--- a/app/views/user_mailer/account_confirmation.html.erb
+++ b/app/views/user_mailer/account_confirmation.html.erb
@@ -75,10 +75,10 @@
                           
                           <!-- // Begin Module: Activation Button \\ -->
                           <td>  
-                            <div style="color: #505050; font-family: Arial; font-size: 15px; line-height: 150%; text-align: left; max-width: 225px;">
+                            <div style="color: #505050; font-family: Arial; font-size: 13px; line-height: 150%; text-align: left; max-width: 225px;">
                               <table>
                                 <tr>
-                                  <td style="background-color:#6FAE4D; height: 35px; padding:6px; width:225px; text-align:center; font-family:Arial; font-size:15px;">                                      
+                                  <td style="background-color:#6FAE4D; height: 35px; padding:6px; width:225px; text-align:center; font-family:Arial; font-size:13px;">                                      
                                     <a href="<%= confirm_url(@user.confirmation_token) %>" target="_blank" style="color: #FFFFFF; text-decoration: none;"><span style="color: #FFFFFF;">ACTIVATE YOUR ACCOUNT</span></a>                                      
                                   </td>
                                 </tr>
@@ -106,9 +106,8 @@
                                 </tr>
                                 <tr>
                                   <td style="color: #707070; font-family:Arial; font-size: 12px; line-height: 125%; text-align: left">
-                                    Ming<br>
-                                    Co-Founder<br>
-                                    @mingbubboli
+                                    The Bubboli Team<br>
+                                    @bubboli
                                   </td>
                                 </tr>
                               </table>
