added option for baby shower in manage gift form

--- a/app/views/gifts/manage.html.erb
+++ b/app/views/gifts/manage.html.erb
@@ -31,7 +31,8 @@
 
         <div class="span6">
           <%= f.input :available, :label => "Availability", :as => :radio, :collection => [["True", true], ["False", false]] %>      
-          <%= f.input :favorite, :label => "Favorite", :as => :radio, :collection => [["True", true], ["False", false]] %>                
+          <%= f.input :favorite, :label => "Favorite", :as => :radio, :collection => [["True", true], ["False", false]] %>
+          <%= f.input :baby_shower, :label => "Baby Shower", :as => :radio, :collection => [["True", true], ["False", false]] %>                
           <%= f.input :description %>
           <%= f.input :why_bubboli_loves_it, :label => "Why Bubboli Loves It" %>
         </div>
