--- a/app/views/pages/home_alt.html.erb
+++ b/app/views/pages/home_alt.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
-  <div class="index-background">  
-    <div class="row">
-      <div style="padding-left: 40px">  
-        <span style="font-size: 20px; text-align: center; font-family: 'futura-pt-condensed';">CURATED BIRTHDAY GIFTS FOR KIDS AT YOUR FINGERTIPS!</span>
+  <div class="row">
+    <div class="index-background">  
+      <div class="row" style="padding-left: 40px">
+        <span style="font-size: 30px; text-align: center; font-family: 'futura-pt-condensed';">BE PREPARED FOR HUGS AND KISSES!</span>
         <br>
         <br>
       </div>
@@ -10,7 +10,7 @@
       <div class="span5">
         <br>
         <p style="font-size: 17px; text-align: center; ">Bubboli helps you keep track of childrens'
-        <span style="font-size: 17px; color: #FFFFFF; background-color: #FF9B97; padding: 5px;">birthdays and sends you curated gift recommendations
+        <span style="font-size: 17px; color: #FFFFFF; background-color: #FF9B97; padding: 5px;">birthdays and curated gift recommendations
         from our trusted community</span> for the special bubbies in your life</span></p>
         <br>
               
@@ -24,42 +24,6 @@
         <iframe width="450" height="253" src="http://www.youtube.com/embed/a7-K1rfFtE8" frameborder="0" allowfullscreen></iframe>
       </div>
     </div>
-  </div>  
-    <br>
-    
-  <div>
-    <hr>
-    <div class="row">
-    <h2 style="text-align: center; font-size: 17px; color: #9092A2;">BUBBOLI IS TRUSTED BY OUR USERS</h2><br>
-    
-    
-      <div class="span4">
-        <p class="quotes">
-          "I was looking for a baby shower gift and turned to my facebook friends for advice.  One of them recommended Bubboli where
-          I found the baby keepsake.  I am soooooo pleased with the purchase.  My friend loved it!" 
-          <br>
-          <small><span class="pull-right">- Amy, New York</span></small>
-        </p>
-      </div>
-      
-      <div class="span4">
-        <p class="quotes">
-        "Bubboli made me the favorite aunt with the Strider bike. I can't wait to see my nephew ride the bike. Thanks bubboli!"   
-        <br>
-        <small><span class="pull-right">- Nancy, Rhode Island</span></small>
-        </p>
-      </div>  
-      
-      <div class="span4">
-        <p class="quotes">
-        "I was so excited when I received the Deluxe Baby Keepsake Kit from my sister after the birth of my first child.  Such an amazing way
-        to capture their little hands and feet.  I am definitely getting this for my girlfriends when they have babies."
-        <br>
-        <small><span class="pull-right">- Ann-Marie, New Jersey</span></small>        
-        </p>
-      </div>          
-    </div>
-    <hr>  
   </div>  
   
   <br>
