put brands we love in about us page

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,7 @@
   <li><%= link_to "ABOUT", about_path %></li>
   <li><%= link_to "BLOG", blogs_path %></li>
   <li><%= link_to "BUBBOLI FAVORITES", favorite_gift_path %></li>
-  <li><%= link_to "BRANDS WE LOVE", gift_brand_path %></li>
+  <li><%= link_to "BRANDS WE LOVE", about_path(:anchor => 'brands_we_love') %></li>
   <li><%= link_to "PRIVACY", privacy_path %></li>
   <li><%= link_to "TERMS OF USE", term_path %></li>
 </ul>  
