--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -35,6 +35,23 @@
     
     <div class="row">
       <div class="span12">
+        <div class="section-header" id="brands_we_love">
+          <div class="section-header-text">
+            <p>BRANDS WE<br> 
+            LOVE</p>
+          </div>    
+        </div>
+      
+      <%= render partial: "brands"%>
+      </div>
+    </div>
+
+    <br>
+    <br>
+    <br>
+    
+    <div class="row">
+      <div class="span12">
         <div class="section-header" id="faq">
           <div class="section-header-text">
             <p>FAQ</p>
