--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -44,7 +44,7 @@
       
       <div class="span4">
         <p class="quotes">
-        "Bubboli made me the favorite aunt with the Strider bike. I can't wait to see my nephew ride the bike. Thanks bubboli!"   
+        "Bubboli made me the favorite aunt with the Strider bike. I can't wait to see my nephew ride it when I visit him next. Thanks bubboli!"   
         <br>
         <small><span class="pull-right">- Nancy, Rhode Island</span></small>
         </p>
