--- a/app/views/layouts/pages.html.erb
+++ b/app/views/layouts/pages.html.erb
@@ -36,7 +36,7 @@
           <ul class="sub-nav pull-left">    
             <li><%= link_to "OUR MISSION", about_path(:anchor => 'our_mission') %></li>
             <li><%= link_to "OUR GIFT CRITERION", about_path(:anchor => 'gift_criterion') %></li>
-            <li class="<%= 'active' if current_page?(gift_brand_path) %>"><%= link_to "BRANDS WE LOVE", gift_brand_path %></li>
+            <li><%= link_to "BRANDS WE LOVE", about_path(:anchor => 'brands_we_love') %></li>
             <li><%= link_to "FAQ", about_path(:anchor => 'faq') %></li>
           </ul>
           
