--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -376,6 +376,27 @@ li.inline  {
   color: $teal-green;
   }
   
+.welcome {
+  position: fixed;
+  top: 200px;
+  left: 0px;
+  z-index: 99;
+  }
+  
+.welcome-text {
+  position: fixed;
+  top: 300px;
+  left: 20px;
+  width: 160px;
+  z-index: 99;
+  text-align: center;
+  color: $dark-green-blue;
+  } 
+
+.welcome-text a {
+  color: $bubboli-red
+  }   
+  
 /*==================================================
  * INDEX PAGE
  * ===============================================*/
