commented out original welcome back message

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -28,7 +28,7 @@
            <li class="<%= 'active' if controller.is_a?(SessionsController) %>"><%= link_to "SIGN IN", sign_in_path %></li>
          <% end %>
        </ul><br>
-       <span class="red-font pull-right"><%= "Welcome back, #{current_user.first_name}" if current_user %></span>
+       <!-- <span class="red-font pull-right"><%= "Welcome back, #{current_user.first_name}" if current_user %></span> -->
     </div> 
   
       
