--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<div class="op3-title op3-stitched-shadow">
+<div class="op3-title op3-stitched-shadow" id="upcoming_birthday">
   UPCOMING BIRTHDAYS
 </div>
 
@@ -23,7 +23,7 @@
 
 <br>
 
-<div class="op3-title op3-stitched-shadow">
+<div class="op3-title op3-stitched-shadow" id="my_kids">
   MY CHILDREN
 </div>
 
@@ -46,7 +46,7 @@
 <br>
 
 
-<div class="op3-title op3-stitched-shadow">
+<div class="op3-title op3-stitched-shadow" id="children_following">
   CHILDREN I AM FOLLOWING
 </div>
 
