--- a/app/views/user_mailer/password_reset.text.erb
+++ b/app/views/user_mailer/password_reset.text.erb
@@ -1,5 +1,15 @@
+Your bubboli.com password!
+
+Hi <%= @user.first_name %>,
+
 To reset your password click the URL below.
 
 <%= edit_password_reset_url(@user.password_reset_token) %>
 
-If you did not request your password to be reset please ignore this email and your password will stay as it is.
+In the event that you didn't make this request, no worries! Your password is still safe and you can delete this email.
+
+Thank you for trusting Bubboli with your gifting!
+
+With love,
+The Bubboli Team
+@bubboli
