edited email confirmation email

--- a/app/views/user_mailer/password_reset.text.erb
+++ b/app/views/user_mailer/password_reset.text.erb
@@ -11,5 +11,5 @@ In the event that you didn't make this request, no worries! Your password is sti
 Thank you for trusting Bubboli with your gifting!
 
 With love,
-The Bubboli Team
+Your friends at Bubboli
 @bubboli
