--- a/app/views/pages/account_confirmation.html.erb
+++ b/app/views/pages/account_confirmation.html.erb
@@ -50,20 +50,17 @@
                             <!-- // Begin Module: Standard Welcome \\ -->
                           	  <br>
                           	  <tr>
-                          	    <td style="color:#707070; font-size: 15px; line-height:150%; font-style: italic; text-decoration: none;"><span style= "color:#707070"><h2>Your <a href="www.bubboli.com" style="color:#707070; text-decoration: none" target="_blank"><span style= "color:#707070">bubboli.com</span></a> password!</h2></span></td>  
+                          	    <td style="color:#707070; font-size: 15px; line-height:150%; font-style: italic;"><h2>Welcome to Bubboli!</h2></td>  
                           	  </tr>
                           	  
                           	  <tr>
-                          	    <td style="color:#707070; font-size: 15px; line-height:150%;">Hi <%= @user.first_name %>,</td>  
-                          	  </tr>
-                          	  
-                          	  <tr>
-                            	  <td style="color:#707070; font-size: 15px; line-height:150%; text-decoration: none;">You requested that your <a href="www.bubboli.com" style="color:#707070; text-decoration: none" target="_blank"><span style= "color:#707070">bubboli.com</span></a> password be reset. </td>
-                              </tr>
-                          	  
-                          	  <tr>
-                            	  <td style="color:#707070; font-size: 15px; line-height:150%;">Click on the button below to create a new password. </td>
+                            	  <td style="color:#707070; font-size: 15px; line-height:150%;">Thank you for signing up to Bubboli and for wanting to
+                                show the kids in your life just how much you love them. </td>
                               </tr>  
+                              
+                              <tr>
+                                <td style="color:#707070; font-size: 15px; line-height:150%;">To complete the registration, please activate your account by clicking the link below. </td>
+                              </tr>
                               
                           	<!-- // End Module: Standard Welcome \\ -->
                           	
@@ -82,7 +79,7 @@
                               <table>
                                 <tr>
                                   <td style="background-color:#6FAE4D; height: 35px; padding:6px; width:225px; text-align:center; font-family:Arial; font-size:13px;">                                      
-                                    <a href="<%= edit_password_reset_url(@user.password_reset_token) if @user.password_reset_token %>" target="_blank" style="color: #FFFFFF; text-decoration: none;"><span style="color: #FFFFFF;">RESET PASSWORD</span></a>                                      
+                                    <a href="<%= confirm_url(@user.confirmation_token) if @user.confirmation_token %>" target="_blank" style="color: #FFFFFF; text-decoration: none;"><span style="color: #FFFFFF;">ACTIVATE YOUR ACCOUNT</span></a>                                      
                                   </td>
                                 </tr>
                               </table>
@@ -91,18 +88,6 @@
                           </td>
                           <!-- // End Module: Activation Button \\ -->
                           
-                        </tr>
-                        
-                        <tr>
-                          <td style="color:#707070; font-size: 15px; line-height:150%;">
-                            In the event that you didn't make this request, no worries! Your password is still safe and you can delete this email.
-                          </td>
-                        </tr> 
-                        
-                        <tr>  
-                          <td style="color:#707070; font-size: 15px; line-height:150%;">
-                            Thank you for trusting Bubboli with your gifting!
-                          </td>  
                         </tr>
                       </table>  
                       <br>
