--- a/app/views/friend_alert_mailer/friend_alert.html.erb
+++ b/app/views/friend_alert_mailer/friend_alert.html.erb
@@ -138,7 +138,7 @@
                                       </tr>
                                     
                                       <tr>
-                                        <td style="background-color:#6FAE4D; height: 25px; padding:6px; width:150px; text-align:center; font-family:Arial; font-size:15px;">                                      
+                                        <td style="background-color:#6FAE4D; height: 25px; padding:6px; width:150px; text-align:center; font-family:Arial; font-size:15px; -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px;">                                      
                                           <a href="http://www.bubboli.com" target="_blank" style="color: #FFFFFF"><span style="color: #FFFFFF;">ACCEPT FRIEND</span></a>                                      
                                         </td>
                                       </tr>
