--- a/app/views/pages/gift_recommendation.html.erb
+++ b/app/views/pages/gift_recommendation.html.erb
@@ -62,6 +62,27 @@
                   
                           <!-- // Begin Module: Standard Header Navigation \\ -->
                   
+                          <td valign="middle" width="260" style="/*@editable*/ color:#202020; font-family:Arial; padding:0; text-align: center">	
+                        	  <table>
+                            	<tr>
+                                <td style="background-color:#63CECA; padding:6px; width:60px; text-align:center; font-family:Arial; font-size:15px; border-left: 5px solid #FFFFFF;">
+                                  <div>
+                                  <a href="http://www.bubboli.com/gifts" target="_blank" style="color: #FFFFFF">Shop</a>
+                                  </div>
+                                </td>    
+                                <td style="background-color:#63CECA; padding:6px; width:60px; text-align:center; font-family:Arial; font-size:15px; border-left: 5px solid #FFFFFF;">
+                                  <div>
+                                  <a href="http://www.bubboli.com/blog" target="_blank" style="color: #FFFFFF">Blog</a>
+                                  </div>
+                              	</td> 
+                              	<td style="background-color:#63CECA; padding:6px; width:60px; text-align:center; font-family:Arial; font-size:15px; border-left: 5px solid #FFFFFF;">
+                                  <div>
+                                  <a href="http://www.bubboli.com/signin" target="_blank" style="color: #FFFFFF">Account</a>
+                                  </div>
+                              	</td> 
+                              </tr>
+                            </table>
+                        	</td>
                           <!-- // End Module: Standard Header Navigation \\ -->  
                     
                         </tr>
@@ -73,62 +94,122 @@
                 <tr>
                   <td>    
                     <!-- // Begin Template Body \\ -->
-                      <table border="0" cellpadding="8" cellspacing="0" width="100%">
+                      <table border="0" cellpadding="20" cellspacing="0" width="100%">
                         <tr>
                           <td valign="top" style="border-collapse: collapse">
                           <div style="color:#505050; font-family: Arial; font-size: 14px; line-height: 100%; padding: 0; text-align: left;">
                             <!-- // Begin Module: Standard Welcome \\ -->
-                          	  <br><br>
-                          	  <span style="color:#707070; font-size: 16px; line-height:150%; font-weight:bold;">Hi <%= @parent.first_name  if @parent %>,</span> <br><br>
-                          	  <br>
-                          	  <tr>
-                          	    <td style="color:#707070; font-size: 15px; line-height:150%;"><%= @user.first_name %> just purchased a gift for <%= @child.first_name %>'s birthday.</td>  
-                          	  </tr>
-                          	  
-                          	  <tr>
-                            	  <td style="color:#707070; font-size: 15px; line-height:150%;">Help others avoid duplicate gifting by <a href="http://www.bubboli.com" style="color:#ff6f6a;
-                                font-weight:normal;text-decoration:none" target="_blank">confirming </a> the gift so others can see what's already been purchased
-                                for <%= @child.first_name %>.</td>
-                              </tr>
+                          	  <span style="color:505050; font-size: 14px; line-height:150%; font-weight:bold;">Hi <%= @user %>,</span> <br><br>
+                          	  You are receiving this letter because...
                           	<!-- // End Module: Standard Welcome \\ -->
-                          	
                           </div>
                           </td>
                         </tr>
-                      </table>  
-                            <!-- // Begin Module: Gift Accession \\ -->
+                        
+                        <tr>
+                          <td valign="top" width="180" style="border-collapse: collapse">
+                            <!-- // Begin Module: Standard Recommendations \\ -->
                             <table border="0" cellpadding="20" cellspacing="0" width="100%">
                               <tr>
                                 
-                                <!-- // Begin Module: Gift Accession \\ -->
+                                <!-- // Begin Module: Recommendation One \\ -->
                                 <td valign="top" style="border-collapse: collapse">
-                                  <%= image_tag @gift.gift_images.first.image_url(:thumb_pic) %>
-                                </td>
-                                <td>  
+                                  <%= image_tag @gifts[0].gift_images.first.image_url(:thumb_pic) if @gifts[0] %>
+                                  
                                   <div style="color: #505050; font-family: Arial; font-size: 14px; line-height: 150%; text-align: left; max-width: 160px;">
-                                    <table>
-                                      <tr>
-                                        <td style="color: #53868b; display: block; font-family: Arial; font-size: 20px; font-weight: normal;
-                                        line-height: 100%; margin-top: 0; margin-right: 0; margin-bottom: 10px; margin-left: 0; text-align: center">
-                                          <%= @gift.name %>
-                                        </td>
-                                      </tr>
-                                      
-                                      <tr>
-                                        <td style="background-color:#6FAE4D; height: 25px; padding:6px; width:150px; text-align:center; font-family:Arial; font-size:15px; -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px;">                                      
-                                          <a href="http://www.bubboli.com" target="_blank" style="color: #FFFFFF"><span style="color: #FFFFFF;">CONFIRM THIS GIFT</span></a>                                      
-                                        </td>
-                                      </tr>
-                                    </table>
-                                      
+                                    <span style="color: #53868b; display: block; font-family: Arial; font-size: 14px; font-weight: bold;
+                                    line-height: 100%; margin-top: 0; margin-right: 0; margin-bottom: 10px; margin-left: 0; text-align: center">
+                                      <%= @gifts[0].name if @gifts[0] %>
+                                    </span>
+                                    <%= @gifts[0].description.truncate(100) if @gifts[0] %>This is what a <a href="http://www.bubboli.com" style="color:#ff6f6a;
+                                    font-weight:normal;text-decoration:none" target="_blank">link </a>looks like.  
                                   </div>
                                 </td>
-                                <!-- // End Module: Gift Accession \\ -->
+                                <!-- // End Module: Recommendation One \\ -->
+                                
+                                <!-- // Begin Module: Recommendation Two \\ -->
+                                <td valign="top" style="border-collapse: collapse">
+                                  <%= image_tag @gifts[1].gift_images.first.image_url(:thumb_pic) if @gifts[1] %>
+                                  
+                                  <div style="color: #505050; font-family: Arial; font-size: 14px; line-height: 150%; text-align: left; max-width: 160px;">
+                                    <span style="color: #53868b; display: block; font-family: Arial; font-size: 14px; font-weight: bold;
+                                    line-height: 100%; margin-top: 0; margin-right: 0; margin-bottom: 10px; margin-left: 0; text-align: center">
+                                      <%= @gifts[1].name if @gifts[1] %>
+                                    </span>
+                                    <%= @gifts[1].description.truncate(100) if @gifts[1] %>. This is what a <a href="http://www.bubboli.com" style="color:#ff6f6a;
+                                    font-weight:normal;text-decoration:none" target="_blank">link </a>looks like.  
+                                  </div>
+                                </td>
+                                <!-- // End Module: Recommendation Two \\ -->
+                                
+                                <!-- // Begin Module: Recommendation Three \\ -->
+                                <td valign="top" style="border-collapse: collapse">
+                                  <%= image_tag @gifts[2].gift_images.first.image_url(:thumb_pic) if @gifts[2] %>
+                                  
+                                  <div style="color: #505050; font-family: Arial; font-size: 14px; line-height: 150%; text-align: left; max-width: 160px;">
+                                    <span style="color: #53868b; display: block; font-family: Arial; font-size: 14px; font-weight: bold;
+                                    line-height: 100%; margin-top: 0; margin-right: 0; margin-bottom: 10px; margin-left: 0; text-align: center">
+                                      <%= @gifts[2].name if @gifts[2] %>
+                                    </span>
+                                    <%= @gifts[2].description.truncate(100) if @gifts[2] %>  
+                                  </div>
+                                </td>
+                                <!-- // End Module: Recommendation Three \\ -->
+                                </tr>
+                                
+                                
+                                <tr>  
+                                <!-- // Begin Module: Recommendation Four \\ -->
+                                <td valign="top" style="border-collapse: collapse">
+                                  <%= image_tag @gifts[3].gift_images.first.image_url(:thumb_pic) if @gifts[3]%>
+                                  
+                                  <div style="color: #505050; font-family: Arial; font-size: 14px; line-height: 150%; text-align: left; max-width: 160px;">
+                                    <span style="color: #53868b; display: block; font-family: Arial; font-size: 14px; font-weight: bold;
+                                    line-height: 100%; margin-top: 0; margin-right: 0; margin-bottom: 10px; margin-left: 0; text-align: center">
+                                      <%= @gifts[3].name if @gifts[3] %>
+                                    </span>
+                                    <%= @gifts[3].description.truncate(100) if @gifts[3] %>  
+                                  </div>
+                                </td>
+                                <!-- // End Module: Recommendation Four \\ -->
+                                
+                                <!-- // Begin Module: Recommendation Five \\ -->
+                                <td valign="top" style="border-collapse: collapse">
+                                  <%= image_tag @gifts[4].gift_images.first.image_url(:thumb_pic) if @gifts[4] %>
+                                  
+                                  <div style="color: #505050; font-family: Arial; font-size: 14px; line-height: 150%; text-align: left; max-width: 160px;">
+                                    <span style="color: #53868b; display: block; font-family: Arial; font-size: 14px; font-weight: bold;
+                                    line-height: 100%; margin-top: 0; margin-right: 0; margin-bottom: 10px; margin-left: 0; text-align: center">
+                                      <%= @gifts[4].name if @gifts[4] %>
+                                    </span>
+                                    <%= @gifts[4].description.truncate(100) if @gifts[4] %>  
+                                  </div>
+                                </td>
+                                <!-- // End Module: Recommendation Five \\ -->
+                                
+                                <!-- // Begin Module: Recommendation Six \\ -->
+                                <td valign="top" style="border-collapse: collapse">
+                                  <%= image_tag @gifts[5].gift_images.first.image_url(:thumb_pic) if @gifts[5] %>
+                                  
+                                  <div style="color: #505050; font-family: Arial; font-size: 14px; line-height: 150%; text-align: left; max-width: 160px;">
+                                    <span style="color: #53868b; display: block; font-family: Arial; font-size: 14px; font-weight: bold;
+                                    line-height: 100%; margin-top: 0; margin-right: 0; margin-bottom: 10px; margin-left: 0; text-align: center">
+                                      <%= @gifts[5].name if @gifts[5] %>
+                                    </span>
+                                    <%= @gifts[5].description.truncate(100) if @gifts[5] %>  
+                                  </div>
+                                </td>
+                                <!-- // End Module: Recommendation Six \\ -->
+                                </tr>
                                 
                               </tr>
                             </table>  
-                            <!-- // End Module: Gift Accession \\ -->
-                            
+                            <!-- // Begin Module: Standard Recommendations \\ -->
+                          </td>
+                        </tr>
+                        
+                        <tr>
+                          <td align="center" valign="top" style="border-collapse: collapse">
                             
                             <!-- // Begin Module: Footer \\ -->
                             <table border="0" cellpadding="0" cellspacing="0" width="600" style="border-top:0">
