added invitations workers

--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -62,7 +62,9 @@
                               </tr>
                           	  
                           	  <tr>
-                            	  <td style="color:#707070; font-size: 15px; line-height:150%;">Click on the button below to create a new password. </td>
+                            	  <td style="color:#707070; font-size: 15px; line-height:150%;">Click on the button below to create a new password. Please note: this link will
+                            	  expire in two days.
+                            	  </td>
                               </tr>  
                               
                           	<!-- // End Module: Standard Welcome \\ -->
