--- a/app/views/user_mailer/password_reset.text.erb
+++ b/app/views/user_mailer/password_reset.text.erb
@@ -2,7 +2,8 @@ Your bubboli.com password!
 
 Hi <%= @user.first_name %>,
 
-To reset your password click the URL below.
+To reset your password click the URL below.  Please note: this link will
+expire in two days.
 
 <%= edit_password_reset_url(@user.password_reset_token) %>
 
