changed style of new child

--- a/app/views/my_children/new.html.erb
+++ b/app/views/my_children/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 
-  <p style="text-align: center">Create a child so family and friends can search for your child and follow them.</p>
+  <h3 style="text-align: center; color: #53868B">Create a child so family and friends can search for your child and follow them.</h3>
   <div class="new-child-well ">
   
     <%= simple_form_for(@my_child, :url => { :action => "create" }, :html => {:class => "form-horizontal"}) do |f| %>
