added more info to followers and pending pages

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -862,7 +862,10 @@ li.child-list {
   position: fixed;
   }  
 
-
+.font-next-to-images {
+  color: $light-gray; 
+  font-size: 12px;
+  }
 
 
 /*==================================================
