--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,7 +13,7 @@
         <% if (0..31).include?(r.child.birthday_days)%>      
         <li class="children-following child-list block">
           <%= render(:partial => 'child_list', :locals => {:r => r})%>
-          <span style="color: #999999; font-size: 12px">Birthday: <%= r.child.birth_date.strftime("%b. %d")%></span>
+          <!-- <span style="color: #999999; font-size: 12px">Birthday: <%= r.child.birth_date.strftime("%b. %d")%></span> -->
           <%= link_to "Unfollow", r, :method => :delete, :data => {:confirm => "Are you sure you want to unfollow this child?"}, :remote => "true", :class => "unfollow btn btn-mini btn-warning btn-spacing" %>
         <% else %>
         <% end %>        
